<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingTop="55dp"
    tools:context=".view.fragment.HomeFragment">

    <TextView
        android:id="@+id/tvAppTitle"
        style="@style/Bold36Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_to_do_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSearch"
        style="@style/Regular14Sp"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_radius_8dp"
        android:hint="@string/search_here"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="60dp"
        android:textColorHint="@color/light_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppTitle"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/search_icon"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/etSearch"
        app:layout_constraintEnd_toEndOf="@id/etSearch"
        app:layout_constraintTop_toTopOf="@id/etSearch" />

    <TextView
        android:id="@+id/tvToDoList"
        style="@style/SemiBold24Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/to_do_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch" />

    <TextView
        android:id="@+id/tvEmpty"
        style="@style/Medium18Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_your_first_note_please_d"
        android:textColor="@color/red_accent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvToDoList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNoteList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvToDoList"
        tools:listitem="@layout/item_note" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/green_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDelete"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/ic_trash"
        app:backgroundTint="@color/red_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>