<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingTop="55dp"
    tools:context=".view.fragment.DetailFragment">

    <EditText
        android:id="@+id/etTitle"
        style="@style/SemiBold24Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bg_edit_text"
        android:hint="@string/write_title_here"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvContentTitle"
        style="@style/Medium18Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <EditText
        android:id="@+id/etContent"
        style="@style/Regular14Sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_bg_edit_text"
        android:hint="@string/write_content_here"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContentTitle"
        tools:ignore="Autofill" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/ic_back"
        app:backgroundTint="@color/dark_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveEditAndConfirm"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/ic_save"
        app:backgroundTint="@color/green_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDeleteAndCancel"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/ic_trash"
        android:visibility="gone"
        app:backgroundTint="@color/red_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSaveEditAndConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>